even more enriched templates + simplified analyzer

--- a/thehive-templates/VirusTotal_GetReport_3_1/long.html
+++ b/thehive-templates/VirusTotal_GetReport_3_1/long.html
@@ -16,8 +16,8 @@
             <div class="row" style="margin-bottom: 1em">
                 <div class="text-center col-md-6">
                     <dl
-                        class="dl-horizontal"
-                        ng-if="content.message"
+                            class="dl-horizontal"
+                            ng-if="content.message"
                     >
                         <dt>Message</dt>
                         <dd class="wrap">
@@ -27,23 +27,33 @@
                     <dl
                             class="dl-horizontal"
                             ng-if="content.attributes.last_analysis_stats"
-                            ng-init="stats = content.attributes.last_analysis_stats; total = stats['harmless'] + stats['type-unsupported'] + stats['suspicious'] + stats['confirmed-timeout'] + stats['timeout'] + stats['failure'] + stats['malicious'] + stats['undetected']"
+                            ng-init="stats = content.attributes.last_analysis_stats; total = stats.harmless + stats.type-unsupported + stats.suspicious + stats.confirmed-timeout + stats.timeout + stats.failure + stats.malicious + stats.undetected"
                     >
                         <dt>Malicious</dt>
                         <dd class="wrap">
-                            <strong style="color: #fa541c">{{content.attributes.last_analysis_stats.malicious}}</strong
-                            >/{{total}}
+                            <strong style="color: #fa541c">{{content.attributes.last_analysis_stats.malicious}}</strong>/{{total}}
                         </dd>
                     </dl>
                     <dl
                             class="dl-horizontal"
                             ng-if="content.attributes.last_analysis_stats"
-                            ng-init="stats = content.attributes.last_analysis_stats; total = stats['harmless'] + stats['type-unsupported'] + stats['suspicious'] + stats['confirmed-timeout'] + stats['timeout'] + stats['failure'] + stats['malicious'] + stats['undetected']"
+                            ng-init="stats = content.attributes.last_analysis_stats; total = stats.harmless + stats.type-unsupported + stats.suspicious + stats.confirmed-timeout + stats.timeout + stats.failure + stats.malicious + stats.undetected"
                     >
                         <dt>Suspicious</dt>
                         <dd class="wrap">
-                            <strong style="color: #ffa940">{{content.attributes.last_analysis_stats.suspicious}}</strong
-                            >/{{total}}
+                            <strong style="color: #ffa940">{{content.attributes.last_analysis_stats.suspicious}}</strong>/{{total}}
+                        </dd>
+                    </dl>
+                    <dl
+                            class="dl-horizontal"
+                            ng-if="content.attributes.last_analysis_stats"
+                            ng-init="stats = content.attributes.last_analysis_stats;
+                                     others = stats.type-unsupported + stats.confirmed-timeout + stats.timeout + stats.failure + stats.undetected;
+                                     total = others + stats.harmless + stats.malicious + stats.suspicious"
+                    >
+                        <dt>Undefined</dt>
+                        <dd class="wrap">
+                            <strong class="text-info">{{others}}</strong>/{{total}}
                         </dd>
                     </dl>
                 </div>
@@ -73,7 +83,8 @@
                     <dt>SHA-256</dt>
                     <dd class="wrap">{{content.id}}</dd>
                 </dl>
-                <div class="col-md-6 text-center" ng-if="content.id && (content.type == 'domain' || content.type ==  'fqdn')">
+                <div class="col-md-6 text-center"
+                     ng-if="content.id && (content.type == 'domain' || content.type ==  'fqdn')">
                     <dl class="dl-horizontal">
                         <dt>Resolution</dt>
                         <dd class="wrap">{{content.id}}</dd>
@@ -85,16 +96,16 @@
                     <dt>VirusTotal Report</dt>
                     <dd>
                         <a
-                            ng-href="{{'https://www.virustotal.com/gui/search/'+content.id}}"
-                            target="_blank"
-                            ng-if="content.type != 'url'"
+                                ng-href="{{'https://www.virustotal.com/gui/search/'+content.id}}"
+                                target="_blank"
+                                ng-if="content.type != 'url'"
                         >
                             https://www.virustotal.com/gui/search/{{content.id}}
                         </a>
                         <a
-                            ng-href="{{'https://www.virustotal.com/gui/url/'+content.id}}"
-                            target="_blank"
-                            ng-if="content.type == 'url'"
+                                ng-href="{{'https://www.virustotal.com/gui/url/'+content.id}}"
+                                target="_blank"
+                                ng-if="content.type == 'url'"
                         >
                             https://www.virustotal.com/gui/url/{{content.id}}
                         </a>
@@ -227,8 +238,13 @@
     </div>
 
     <div class="panel panel-info" ng-if="content.relations.contacted_urls.meta.count > 0">
-        <div class="panel-heading">
-            <strong>Contacted URLs</strong>
+        <div class="panel-heading row">
+            <div class="col-md-6">
+                <strong>Contacted URLs</strong>
+            </div>
+            <div class="col-md-6 text-right" ng-if="content.relations.contacted_urls.meta.count > 10">
+                (Last 10)
+            </div>
         </div>
         <div class="panel-body">
             <table class="table table-hover">
@@ -246,7 +262,7 @@
                         <strong>{{url.attributes.last_analysis_date*1000 | date: 'yyyy-MM-dd'}}</strong>
                     </td>
                     <td
-                        ng-init="stats = url.attributes.last_analysis_stats; total = stats['harmless'] + stats['type-unsupported'] + stats['suspicious'] + stats['confirmed-timeout'] + stats['timeout'] + stats['failure'] + stats['malicious'] + stats['undetected']"
+                            ng-init="stats = url.attributes.last_analysis_stats; total = stats.harmless + stats.type-unsupported + stats.suspicious + stats.confirmed-timeout + stats.timeout + stats.failure + stats.malicious + stats.undetected"
                     >
                         <strong ng-class="url.attributes.last_analysis_stats.malicious > 0 ? 'text-danger': 'text-success'">
                             {{url.attributes.last_analysis_stats.malicious || "0"}}
@@ -261,8 +277,13 @@
     </div>
 
     <div class="panel panel-info" ng-if="content.relations.contacted_domains.meta.count > 0">
-        <div class="panel-heading">
-            <strong>Contacted Domains</strong>
+        <div class="panel-heading row">
+            <div class="col-md-6">
+                <strong>Contacted Domains</strong>
+            </div>
+            <div class="col-md-6 text-right" ng-if="content.relations.contacted_domains.meta.count > 10">
+                (Last 10)
+            </div>
         </div>
         <div class="panel-body">
             <table class="table table-hover">
@@ -280,13 +301,15 @@
                         <strong>{{domain.id}}</strong>
                     </td>
                     <td
-                        ng-init="stats = domain.attributes.last_analysis_stats; total = stats['harmless'] + stats['type-unsupported'] + stats['suspicious'] + stats['confirmed-timeout'] + stats['timeout'] + stats['failure'] + stats['malicious'] + stats['undetected']"
+                            ng-init="stats = domain.attributes.last_analysis_stats; total = stats.harmless + stats.type-unsupported + stats.suspicious + stats.confirmed-timeout + stats.timeout + stats.failure + stats.malicious + stats.undetected"
                     >
                         <strong ng-class="domain.attributes.last_analysis_stats.malicious > 0 ? 'text-danger': 'text-success'">
                             {{domain.attributes.last_analysis_stats.malicious || "0"}}
                         </strong> / {{total}}
                     </td>
-                    <td ng-if="domain.attributes.creation_date">{{domain.attributes.creation_date*1000 | date: 'yyyy-MM-dd'}}</td>
+                    <td ng-if="domain.attributes.creation_date">{{domain.attributes.creation_date*1000 | date:
+                        'yyyy-MM-dd'}}
+                    </td>
                     <td ng-if="!domain.attributes.creation_date">-</td>
                     <td>{{domain.attributes.registrar || "-"}}</td>
                 </tr>
@@ -295,9 +318,48 @@
         </div>
     </div>
 
-    <div class="panel panel-info" ng-if="content.relations.contacted_ips.meta.count > 0">
+    <div class="panel panel-info" ng-if="content.relations.last_serving_ip_address.meta.count > 0">
         <div class="panel-heading">
-            <strong>Contacted IP Addresses</strong>
+            <strong>Last Serving IP Address</strong>
+        </div>
+        <div class="panel-body">
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">IP</th>
+                    <th scope="col">Detections</th>
+                    <th scope="col">Autonomous System</th>
+                    <th scope="col">Country</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-init="ip = content.relations.last_serving_ip_address.data">
+                    <td>
+                        <strong>{{ip.id}}</strong>
+                    </td>
+                    <td
+                            ng-init="stats = ip.attributes.last_analysis_stats; total = stats.harmless + stats.type-unsupported + stats.suspicious + stats.confirmed-timeout + stats.timeout + stats.failure + stats.malicious + stats.undetected"
+                    >
+                        <strong ng-class="ip.attributes.last_analysis_stats.malicious > 0 ? 'text-danger': 'text-success'">
+                            {{ip.attributes.last_analysis_stats.malicious || "0"}}
+                        </strong> / {{total}}
+                    </td>
+                    <td>{{ip.attributes.asn || "-"}}</td>
+                    <td>{{ip.attributes.country || "-"}}</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="panel panel-info" ng-if="content.relations.contacted_ips.meta.count > 0">
+        <div class="panel-heading row">
+            <div class="col-md-6">
+                <strong>Contacted IP Addresses</strong>
+            </div>
+            <div class="col-md-6 text-right" ng-if="content.relations.contacted_ips.meta.count > 10">
+                (Last 10)
+            </div>
         </div>
         <div class="panel-body">
             <table class="table table-hover">
@@ -315,7 +377,7 @@
                         <strong>{{ip.id}}</strong>
                     </td>
                     <td
-                        ng-init="stats = ip.attributes.last_analysis_stats; total = stats['harmless'] + stats['type-unsupported'] + stats['suspicious'] + stats['confirmed-timeout'] + stats['timeout'] + stats['failure'] + stats['malicious'] + stats['undetected']"
+                            ng-init="stats = ip.attributes.last_analysis_stats; total = stats.harmless + stats.type-unsupported + stats.suspicious + stats.confirmed-timeout + stats.timeout + stats.failure + stats.malicious + stats.undetected"
                     >
                         <strong ng-class="ip.attributes.last_analysis_stats.malicious > 0 ? 'text-danger': 'text-success'">
                             {{ip.attributes.last_analysis_stats.malicious || "0"}}
@@ -330,8 +392,13 @@
     </div>
 
     <div class="panel panel-info" ng-if="content.relations.urls.meta.count > 0">
-        <div class="panel-heading">
-            <strong>Detected URLs</strong>
+        <div class="panel-heading row">
+            <div class="col-md-6">
+                <strong>Detected URLs</strong>
+            </div>
+            <div class="col-md-6 text-right" ng-if="content.relations.urls.meta.count > 10">
+                (Last 10)
+            </div>
         </div>
         <div class="panel-body">
             <table class="table table-hover">
@@ -349,7 +416,7 @@
                         <strong>{{url.attributes.last_analysis_date*1000 | date: 'yyyy-MM-dd'}}</strong>
                     </td>
                     <td
-                        ng-init="stats = url.attributes.last_analysis_stats; total = stats['harmless'] + stats['type-unsupported'] + stats['suspicious'] + stats['confirmed-timeout'] + stats['timeout'] + stats['failure'] + stats['malicious'] + stats['undetected']"
+                            ng-init="stats = url.attributes.last_analysis_stats; total = stats.harmless + stats.type-unsupported + stats.suspicious + stats.confirmed-timeout + stats.timeout + stats.failure + stats.malicious + stats.undetected"
                     >
                         <strong ng-class="url.attributes.last_analysis_stats.malicious > 0 ? 'text-danger': 'text-success'">
                             {{url.attributes.last_analysis_stats.malicious || "0"}}
@@ -364,8 +431,13 @@
     </div>
 
     <div class="panel panel-info" ng-if="content.relations.downloaded_files.meta.count > 0">
-        <div class="panel-heading">
-            <strong>Detected files downloaded from this domain</strong>
+        <div class="panel-heading row">
+            <div class="col-md-6">
+                <strong>Detected files downloaded from this domain</strong>
+            </div>
+            <div class="col-md-6 text-right" ng-if="content.relations.downloaded_files.meta.count > 10">
+                (Last 10)
+            </div>
         </div>
         <div class="panel-body">
             <table class="table table-hover">
@@ -382,7 +454,7 @@
                         <strong>{{file.attributes.last_analysis_date*1000 | date: 'yyyy-MM-dd'}}</strong>
                     </td>
                     <td
-                        ng-init="stats = file.attributes.last_analysis_stats; total = stats['harmless'] + stats['type-unsupported'] + stats['suspicious'] + stats['confirmed-timeout'] + stats['timeout'] + stats['failure'] + stats['malicious'] + stats['undetected']"
+                            ng-init="stats = file.attributes.last_analysis_stats; total = stats.harmless + stats.type-unsupported + stats.suspicious + stats.confirmed-timeout + stats.timeout + stats.failure + stats.malicious + stats.undetected"
                     >
                         <strong ng-class="file.attributes.last_analysis_stats.malicious > 0 ? 'text-danger': 'text-success'">
                             {{file.attributes.last_analysis_stats.malicious || "0"}}
@@ -396,8 +468,13 @@
     </div>
 
     <div class="panel panel-info" ng-if="content.relations.referrer_files.meta.count > 0">
-        <div class="panel-heading">
-            <strong>Detected files which refer to this domain</strong>
+        <div class="panel-heading row">
+            <div class="col-md-6">
+                <strong>Detected files which refer to this domain</strong>
+            </div>
+            <div class="col-md-6 text-right" ng-if="content.relations.referrer_files.meta.count > 10">
+                (Last 10)
+            </div>
         </div>
         <div class="panel-body">
             <table class="table table-hover">
@@ -414,7 +491,7 @@
                         <strong>{{file.attributes.last_analysis_date*1000 | date: 'yyyy-MM-dd'}}</strong>
                     </td>
                     <td
-                        ng-init="stats = file.attributes.last_analysis_stats; total = stats['harmless'] + stats['type-unsupported'] + stats['suspicious'] + stats['confirmed-timeout'] + stats['timeout'] + stats['failure'] + stats['malicious'] + stats['undetected']"
+                            ng-init="stats = file.attributes.last_analysis_stats; total = stats.harmless + stats.type-unsupported + stats.suspicious + stats.confirmed-timeout + stats.timeout + stats.failure + stats.malicious + stats.undetected"
                     >
                         <strong ng-class="file.attributes.last_analysis_stats.malicious > 0 ? 'text-danger': 'text-success'">
                             {{file.attributes.last_analysis_stats.malicious || "0"}}
