#1110 ensure report template is working with TH4 and TH5

--- a/thehive-templates/VirusTotal_GetReport_3_1/long.html
+++ b/thehive-templates/VirusTotal_GetReport_3_1/long.html
@@ -527,7 +527,7 @@
                     </td>
                     <td>
                         <i
-                                ng-class="scanner.category == 'malicious' ? 'text-danger fas fa-bug' : (scanner.category == 'suspicious' ? 'text-warning fas fa-bug' : (scanner.category == 'harmless' ? 'text-success fas fa-check-circle' : 'text-info fas fa-question-circle' ))"
+                                ng-class="scanner.category == 'malicious' ? 'text-danger fa fa-bug' : (scanner.category == 'suspicious' ? 'text-warning fa fa-bug' : (scanner.category == 'harmless' ? 'text-success fa fa-check-circle' : 'text-info fa fa-question-circle' ))"
                         >
                         </i>
                     </td>
