--- a/thehive-templates/SEKOIAIntelligenceCenter_Observables_1_0/long.html
+++ b/thehive-templates/SEKOIAIntelligenceCenter_Observables_1_0/long.html
@@ -3,7 +3,7 @@
         No results found
     </div>
     <h2 ng-if="content.results.length > 0">{{content.results.length}} Observable(s)</h2>
-    <div class="panel panel-info" ng-if="content.results.length > 0" ng-repeat="observable in content.results track by 'id'">
+    <div class="panel panel-info" ng-if="content.results.length > 0" ng-repeat="observable in content.results track by $id">
         <div class="panel-heading">
             <strong>{{observable.x_inthreat_short_display | fang}}</strong>
         </div>
