--- a/thehive-templates/SEKOIAIntelligenceCenter_Context_1_0/long.html
+++ b/thehive-templates/SEKOIAIntelligenceCenter_Context_1_0/long.html
@@ -3,7 +3,7 @@
         No results found
     </div>
     <h2 ng-if="content.results.length > 0">{{content.results.length}} Context(s)</h2>
-    <div ng-repeat="bundle in content.results track by 'id'">
+    <div ng-repeat="bundle in content.results track by bundle.id">
         <h4>{{bundle.id}}</h4>
         <div ng-if="bundle.objects.length > 0" ng-repeat="item in bundle.objects">
             <div class="panel panel-info" ng-if="item.type !== 'relationship' && item.type !== 'marking-definition'">
