--- a/thehive-templates/SEKOIAIntelligenceCenter_Indicators_1_0/long.html
+++ b/thehive-templates/SEKOIAIntelligenceCenter_Indicators_1_0/long.html
@@ -3,7 +3,7 @@
         No results found
     </div>
     <h2 ng-if="content.results.length > 0">{{content.results.length}} Indicator(s)</h2>
-    <div class="panel panel-info" ng-if="content.results.length > 0" ng-repeat="indicator in content.results track by 'id'">
+    <div class="panel panel-info" ng-if="content.results.length > 0" ng-repeat="indicator in content.results track by indicator.id">
         <div class="panel-heading">
             <strong>{{indicator.name | fang}}</strong>
         </div>
